tests/syntax_error/L_suffix.jou
def foo() -> None:
    # This is how "long" numbers are created in C
    x = 0L  # Error: invalid number or variable name "0L"
